fix: Phone Layout DMContainer being too small

--- a/src/pages/ArtistPage/ArtistPage.module.css
+++ b/src/pages/ArtistPage/ArtistPage.module.css
@@ -78,10 +78,6 @@
 
 }
 
-.dmContainer > * {
-  flex: 0 1 20%
-}
-
 .artistPage {
   display: flex;
   gap: 2rem;
